# BrawlerScrapper

./: .gitignore  Dockerfile  README.md  db_create.sql  index.html  pyproject.toml  requirements.txt  run.py  styles.css  styles.scss
.github/workflows/: ci.yml
app/database/: daily_to_database.py  fill_database.py
app/src/: api_handler.py  db_handler.py  execution.py  fill_database.py  methods.py  url_scrapper.py
app/test/: test_api_handler.py  test_url_scrapper.py
app/test/api/: CorrectResponse.json  ErrorResponse.json
app/test/pages/: AetherhubDecks.txt  AetherhubErr.txt  AetherhubSingleList.txt  MtgdecksDecks.txt  MtgdecksErr.txt  MtgdecksSingleList.txt
