[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brawler_scrapper"
version = "0.0.1"
authors = [
  { name="Wuzi38", email="wojciech.zysnarski91@gmail.com" },
]
dependencies = [
    "beautifulsoup4",
    "mysql-connector-python"
]
description = "A tool created for downloading decklists from aetherhub and mtgdecks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]